@@ -134,11 +134,13 @@ set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README")
 set(CPACK_NSIS_HELP_LINK "TODO:simspark wiki link")
 set(CPACK_NSIS_URL_INFO_ABOUT "http://simspark.sourceforge.net")
 set(CPACK_NSIS_CONTACT "simspark-devel@lists.sourceforge.net")
-set(CREATE_BATCH_FILES "ClearErrors\nFileOpen \$0
-\$INSTDIR\\\\bin\\\\simspark.bat w\nFileWrite \$0
-'PATH=%PATH%;%SPARK_DIR%\\\\lib\\\\simspark;%RCSSSERVER3D_DIR%\\\\lib\\\\rcssserver3d\$\\\\nsimspark.exe'\nFileClose \$0")
+set(CREATE_SIMSPARK_BAT "ClearErrors\nFileOpen \$0 \$INSTDIR\\\\bin\\\\simspark.cmd w\nFileWrite \$0 'PATH=%PATH%;%SPARK_DIR%\\\\lib\\\\simspark;%RCSSSERVER3D_DIR%\\\\lib\\\\rcssserver3d\$\\\\nsimspark.exe'\nFileClose \$0")
+set(CREATE_MONITOR_BAT "ClearErrors\nFileOpen \$0 \$INSTDIR\\\\bin\\\\rcssmonitor3d.cmd w\nFileWrite \$0 'PATH=%PATH%;%SPARK_DIR%\\\\lib\\\\simspark;%RCSSSERVER3D_DIR%\\\\lib\\\\rcssserver3d\$\\\\nrcssmonitor3d.exe'\nFileClose \$0")
+set(CREATE_AGENT_BAT "ClearErrors\nFileOpen \$0 \$INSTDIR\\\\bin\\\\rcssagent3d.cmd w\nFileWrite \$0 'PATH=%PATH%;%SPARK_DIR%\\\\lib\\\\simspark;%RCSSSERVER3D_DIR%\\\\lib\\\\rcssserver3d\$\\\\nrcssagent3d.exe'\nFileClose \$0")
+set(CREATE_BATCH_FILES "${CREATE_SIMSPARK_BAT}\n${CREATE_MONITOR_BAT}\n${CREATE_AGENT_BAT}")
 set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "WriteRegExpandStr HKLM 'SYSTEM\\\\CurrentControlSet\\\\Control\\\\Session Manager\\\\Environment\\\\' 'RCSSSERVER3D_DIR' '\$INSTDIR'\n${CREATE_BATCH_FILES}")
-set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "Delete '\$INSTDIR\\\\bin\\\\simspark.bat'\nDeleteRegValue HKLM 'SYSTEM\\\\CurrentControlSet\\\\Control\\\\Session Manager\\\\Environment\\\\' 'RCSSSERVER3D_DIR'")
+set(DELETE_BATCH_FILES "Delete '\$INSTDIR\\\\bin\\\\simspark.cmd'\nDelete '\$INSTDIR\\\\bin\\\\rcssmonitor3d.cmd'\nDelete '\$INSTDIR\\\\bin\\\\rcssagent3d.cmd'")
+set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "${DELETE_BATCH_FILES}\nDeleteRegValue HKLM 'SYSTEM\\\\CurrentControlSet\\\\Control\\\\Session Manager\\\\Environment\\\\' 'RCSSSERVER3D_DIR'")
 
 include(CPack)
 
